@@ -18,6 +18,8 @@ v2.13.0
   * ignored errors no longer affect apdex score
   * added record_transaction method to the api to allow recording
     details from web and background transactions occurring outside RPM
+  * fixed a bug related to enabling a gold trial / upgrade not sending
+    trasaction traces correctly
     
 v2.12.3
   * fix regression in startup sequence
